--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,50 +9,41 @@ dependencies = [
     "neo4j>=5.15.0",
     "py2neo>=2021.2.4",
     "neomodel>=5.3.0",
-    
     # Natural Language Processing
     "spacy>=3.7.0",
     "transformers>=4.35.0",
     "torch>=2.1.0",
     "huggingface-hub>=0.19.0",
     "nltk>=3.8.1",
-    
     # Data Processing and Analysis
     "pandas>=2.1.0",
     "numpy>=1.24.0",
     "scipy>=1.11.0",
     "scikit-learn>=1.3.0",
-    
     # Web Scraping and Data Extraction
     "requests>=2.31.0",
     "beautifulsoup4>=4.12.0",
     "lxml>=4.9.0",
     "scrapy>=2.11.0",
-    
     # Configuration and Environment
     "pydantic>=2.5.0",
     "python-dotenv>=1.0.0",
     "pyyaml>=6.0.1",
     "click>=8.1.0",
-    
     # Workflow and Task Management
     "prefect>=2.14.0",
     "celery>=5.3.0",
-    
     # API and LLM Integration
     "openai>=1.3.0",
     "anthropic>=0.7.0",
     "httpx>=0.25.0",
-    
     # Embeddings and Similarity
     "sentence-transformers>=2.2.0",
     "faiss-cpu>=1.7.4",
-    
     # Visualization and Monitoring
     "matplotlib>=3.8.0",
     "plotly>=5.17.0",
     "networkx>=3.2.0",
-    
     # Testing and Quality
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
@@ -60,6 +51,7 @@ dependencies = [
     "isort>=5.12.0",
     "flake8>=6.1.0",
     "mypy>=1.7.0",
+    "aiofiles>=24.1.0",
 ]
 
 [project.optional-dependencies]
