--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,10 @@ dependencies = [
     "flake8>=6.1.0",
     "mypy>=1.7.0",
     "aiofiles>=24.1.0",
+    "fastapi>=0.116.1",
+    "uvicorn>=0.35.0",
+    "python-multipart>=0.0.20",
+    "aiohttp>=3.12.14",
 ]
 
 [project.optional-dependencies]
