--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ dependencies = [
     "uvicorn>=0.35.0",
     "python-multipart>=0.0.20",
     "aiohttp>=3.12.14",
+    "protobuf>=6.31.1",
+    "tiktoken>=0.9.0",
+    "sentencepiece>=0.2.0",
 ]
 
 [project.optional-dependencies]
