--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,23 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Cache and temporary files
+cache/
+output/
+.autograph_cache/
+*.log
+
+# Generated config files (keep only demo configs)
+autograph-*.yaml
+test-*.yaml
+entity-catalog.yaml
+
+
+# Backup and temporary files
+*_old.py
+*_new.py
+*_backup.py
+*_temp.py
+*.backup
+*.tmp
